try overflow fix

--- a/style.css
+++ b/style.css
@@ -84,8 +84,7 @@ body {
 }
 
 #description {
-  width: 50vw;
-  max-width: 600px;
+  max-width: 800px;
   margin: auto;
   pointer-events: auto;
 }
